change on .ipynb

--- a/CodeSolutions/HW2/HW2_Deep.ipynb
+++ b/CodeSolutions/HW2/HW2_Deep.ipynb
@@ -226,7 +226,7 @@
         "        return 1 / (1 + np.exp(-x))\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Forward pass\n",
+        "        # forward pass\n",
         "        z = self.hidden_weight @ x.T + self.bias_hidden\n",
         "        h = self.sigmoid(z)\n",
         "        y_hat = self.outputweights @ h + self.outputbias\n",
@@ -265,20 +265,20 @@
         "    def backward(self):\n",
         "        batch_size = self.y.shape[0]\n",
         "\n",
-        "        # Error at output\n",
+        "        # error at output\n",
         "        dE_dyhat = (self.y_hat - self.y) / batch_size\n",
         "\n",
-        "        # Output layer gradients\n",
-        "        dE_dv = dE_dyhat.T @ self.h          # (1, hidden_size)\n",
-        "        dE_dc = np.sum(dE_dyhat, axis=0, keepdims=True)  # (1,1)\n",
+        "        # output layer gradients\n",
+        "        dE_dv = dE_dyhat.T @ self.h\n",
+        "        dE_dc = np.sum(dE_dyhat, axis=0, keepdims=True)\n",
         "\n",
-        "        # Hidden layer gradients\n",
-        "        dE_dh = dE_dyhat @ self.v            # (batch_size, hidden_size)\n",
+        "        # hidden layer gradients\n",
+        "        dE_dh = dE_dyhat @ self.v\n",
         "        dh_dz = self.h * (1 - self.h)\n",
-        "        dE_dz = dE_dh * dh_dz                # (batch_size, hidden_size)\n",
+        "        dE_dz = dE_dh * dh_dz\n",
         "\n",
-        "        dE_dw = dE_dz.T @ self.x             # (hidden_size, input_size)\n",
-        "        dE_db = np.sum(dE_dz, axis=0, keepdims=True).T   # (hidden_size,1)\n",
+        "        dE_dw = dE_dz.T @ self.x\n",
+        "        dE_db = np.sum(dE_dz, axis=0, keepdims=True).T\n",
         "\n",
         "        grads = {\n",
         "            \"output_weight\": dE_dv,\n",
@@ -305,14 +305,14 @@
         "            grads[key].fill(0)\n",
         "\n",
         "\n",
-        "# Generate data\n",
+        "# generate data\n",
         "\n",
         "np.random.seed(42)\n",
         "N = 100\n",
         "x = np.linspace(-1, 1, N).reshape(-1,1)\n",
         "y = np.sin(2*np.pi*x) + np.random.normal(0,0.01,size=(N,1))\n",
         "\n",
-        "# Split into training and test sets\n",
+        "# split into training and test sets\n",
         "idx = np.random.permutation(N)\n",
         "train_idx = idx[:80]\n",
         "test_idx = idx[80:]\n",
@@ -321,31 +321,31 @@
         "x_test, y_test = x[test_idx], y[test_idx]\n",
         "\n",
         "\n",
-        "# Initialize model, optimizer\n",
+        "# initialize model, optimizer\n",
         "\n",
         "model = DeepRegression(input_size=1, num_hidden_size=5)\n",
         "params = model.parameters()\n",
         "optimizer = OptimizerSGD(params, lr=0.1)\n",
         "\n",
         "\n",
-        "# Training loop\n",
+        "# training loop\n",
         "\n",
         "epochs = 3000\n",
         "loss_history = []\n",
         "\n",
         "for epoch in range(epochs):\n",
-        "    # Forward pass\n",
+        "    # forward pass\n",
         "    y_hat, h = model.forward(x_train)\n",
         "\n",
-        "    # Compute loss\n",
+        "    # compute loss\n",
         "    loss_fn = MSERegression(y_train, y_hat, h, model.outputweights, x_train)\n",
         "    loss_value = loss_fn.loss()\n",
         "    loss_history.append(loss_value)\n",
         "\n",
-        "    # Backward pass\n",
+        "    # backward pass\n",
         "    grads = loss_fn.backward()\n",
         "\n",
-        "    # Update parameters\n",
+        "    # update parameters\n",
         "    optimizer.step(grads)\n",
         "    optimizer.zero_grad(grads)\n",
         "\n",
@@ -353,7 +353,7 @@
         "        print(f\"Epoch {epoch+1}, Loss={loss_value:.6f}\")\n",
         "\n",
         "\n",
-        "#  Plot training loss\n",
+        "#  plot training loss\n",
         "\n",
         "plt.figure(figsize=(8,5))\n",
         "plt.plot(loss_history)\n",
@@ -363,7 +363,7 @@
         "plt.show()\n",
         "\n",
         "\n",
-        "# Test predictions\n",
+        "# test predictions\n",
         "\n",
         "y_pred_test, _ = model.forward(x_test)\n",
         "plt.figure(figsize=(8,5))\n",
@@ -381,9 +381,9 @@
           "height": 1000
         },
         "id": "TFaKCyXBTeOD",
-        "outputId": "8c83478c-b31e-4525-ef1c-f4686b040088"
+        "outputId": "0ac81b67-7cda-450e-e2fa-c79a6006dc4b"
       },
-      "execution_count": 32,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -476,10 +476,10 @@
         "        \"\"\"Forward pass. x shape: (N, input_size)\n",
         "        Returns (y_hat, hidden_activations)\n",
         "        \"\"\"\n",
-        "        # z: (N, hidden_size)\n",
+        "\n",
         "        z = x @ self.hidden_weights.T + self.bias_hidden  # broadcasting bias (1,hidden)\n",
-        "        h = self.sigmoid(z)                                # (N, hidden_size)\n",
-        "        y_hat = h @ self.output_weight.T + self.outputbias # (N,1)\n",
+        "        h = self.sigmoid(z)\n",
+        "        y_hat = h @ self.output_weight.T + self.outputbias\n",
         "        return y_hat, h\n",
         "\n",
         "    def __call__(self, x):\n",
@@ -492,7 +492,7 @@
         "        self.output_weight = np.random.normal(0, 0.1, (1, self.num_hidden_size))\n",
         "        self.outputbias = np.random.normal(0, 0.1, (1, 1))\n",
         "\n",
-        "        # dict used by optimizer (kept as references to the arrays)\n",
+        "        # dict used by optimizer\n",
         "        self.params = {\n",
         "            \"hidden_weights\": self.hidden_weights,\n",
         "            \"bias_hidden\": self.bias_hidden,\n",
@@ -502,7 +502,7 @@
         "        return self.params\n",
         "\n",
         "\n",
-        "# Loss + Backprop\n",
+        "# loss + backprop\n",
         "\n",
         "class MSERegression:\n",
         "    \"\"\"MSE loss for regression and analytical backprop gradients.\n",
@@ -525,23 +525,22 @@
         "\n",
         "    def backward(self):\n",
         "        N = self.y.shape[0]\n",
-        "        # dE/dy_hat: (N,1)\n",
+        "\n",
         "        dE_dyhat = (self.y_hat - self.y) / N\n",
         "\n",
         "        # output layer grads\n",
-        "        # dE/dv: (1, hidden)\n",
+        "        # dE/dv)\n",
         "        dE_dv = dE_dyhat.T @ self.h\n",
         "\n",
         "        # output bias grad: (1,1)\n",
         "        dE_dc = np.sum(dE_dyhat, axis=0, keepdims=True)\n",
         "\n",
-        "        # propagate to hidden: (N, hidden)\n",
-        "        dE_dh = dE_dyhat @ self.v   # (N,1) @ (1,hidden) -> (N,hidden)\n",
-        "        dh_dz = self.h * (1 - self.h)  # (N,hidden)\n",
-        "        dE_dz = dE_dh * dh_dz          # (N,hidden) elementwise\n",
-        "\n",
+        "        # propagate to hidden:\n",
+        "        dE_dh = dE_dyhat @ self.v\n",
+        "        dh_dz = self.h * (1 - self.h)\n",
+        "        dE_dz = dE_dh * dh_dz\n",
         "        # hidden weights & bias grads\n",
-        "        # dE/dw: (hidden, input)\n",
+        "        # dE/dw:\n",
         "        dE_dw = dE_dz.T @ self.x\n",
         "        # dE/db_hidden: (1, hidden)\n",
         "        dE_db = np.sum(dE_dz, axis=0, keepdims=True)\n",
@@ -592,7 +591,7 @@
         "    losses = []\n",
         "\n",
         "    for epoch in range(epochs):\n",
-        "        y_hat, h = model.forward(x_train)                  # (N,1), (N,hidden)\n",
+        "        y_hat, h = model.forward(x_train)\n",
         "        loss_obj = MSERegression(y_train, y_hat, h, model.output_weight, x_train)\n",
         "        loss_value = loss_obj.loss()\n",
         "        losses.append(loss_value)\n",
@@ -643,9 +642,9 @@
           "height": 1000
         },
         "id": "uttfpKWiaXcG",
-        "outputId": "2b166873-177f-4cd9-9b68-f49f2755a9b8"
+        "outputId": "cb5d0879-e7d5-4ef3-e123-719e7ccc458c"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "display_data",
